# am-rs

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  SUMMARY.md  am-hal.txt  flake.nix  justfile  link.x  test-exit.sh
.cargo/: config.toml
.zed/: setting.json  settings.json
macros/: Cargo.toml
macros/src/: lib.rs  module.rs
platform/build-helper/: Cargo.toml
platform/build-helper/src/: lib.rs
platform/nemu/: Cargo.toml  build.rs  link.x
platform/nemu/src/: lib.rs  preclude.rs  stdio.rs
platform/qemu/: Cargo.toml
platform/qemu/linker_scripts/: riscv32i_link.x  riscv32im_link.x
platform/qemu/src/: heap.rs  lib.rs  preclude.rs  stdio.rs
platform/runtime/: Cargo.toml  build.rs
platform/runtime-common/: Cargo.toml
platform/runtime-common/src/: lib.rs
platform/runtime/src/: lib.rs
platform/runtime/src/io/: mod.rs
platform/runtimes/common/: Cargo.toml
platform/runtimes/common/src/: heap.rs  lib.rs  macro.rs  stdio.rs
platform/runtimes/nemu/: Cargo.toml
platform/runtimes/nemu/src/: critical_section.rs  exit.rs  lib.rs  startup.rs  stdio.rs
platform/runtimes/qemu/: Cargo.toml
platform/runtimes/qemu/src/: critical_section.rs  exit.rs  lib.rs  stdio.rs
platform/runtimes/spike/: Cargo.toml
platform/runtimes/spike/linker_scripts/: riscv32i_link.x
platform/runtimes/spike/src/: critical_section.rs  exit.rs  lib.rs  startup.rs  stdio.rs
runtime/riscv32i/: Cargo.toml  link.x
runtime/riscv32i/src/: lib.rs
scripts/: ARCHS.nu  build.nu  disasm.nu  helper.nu  run.nu  utils.nu
scripts/arch/: main.nu  utils.nu
scripts/run/: main.nu  nemu.nu  qemu.nu  spike.nu
std/src/: main.rs
