[workspace]
resolver = "2"
members = [
    "macros",

    "platform/build-helper",
    "platform/runtime",
    "platform/runtimes/common",
    "platform/runtimes/nemu",
    "platform/runtimes/qemu",
    "platform/runtimes/spike",

    # test binary
    "bin/dummy",
    "bin/hello",
    "bin/panic",
    "bin/alloc",

    # basic binary
    "bin/stdin",

    # simd test
    "bin/vector",

    # That's insane
    "bin/rv64emu",
]

[workspace.dependencies]
embedded-hal = "1.0.0"
embedded-alloc = "0.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
