[workspace]
resolver = "2"
members = [
    "macros",

    "platform/build-helper",
    "platform/runtime",
    "platform/runtimes/common",
    "platform/runtimes/nemu",
    "platform/runtimes/qemu",
    "platform/runtimes/spike",

    # test binary
    "bin/test/dummy",
    "bin/test/hello",
    "bin/test/panic",
    "bin/test/alloc",
    "bin/test/vector",

    # basic binary
    "bin/basic/stdin",

    # That's insane
    "bin/others/rv64emu",
    "bin/others/mnist",
]

[workspace.dependencies]
embedded-hal = "1.0.0"
embedded-alloc = "0.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
