[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[features]
nemu = ["nemu_runtime"]
qemu = ["qemu_runtime"]
spike = ["spike_runtime"]

[dependencies]
macros = { path = "../../macros" }

# Common runtime code shared by all platforms
common = { path = "../runtimes/common" }

# Optional runtime dependencies - only included when feature is enabled
nemu_runtime = { path = "../runtimes/nemu", optional = true }
qemu_runtime = { path = "../runtimes/qemu", optional = true }
spike_runtime = { path = "../runtimes/spike", optional = true }

# Re-export common dependencies that all runtimes need
embedded-hal = { workspace = true }
embedded-alloc = { workspace = true }
